fix spacing

--- a/src/Pages/Models/Company/CompanyDetail/CompanyDetail.module.css
+++ b/src/Pages/Models/Company/CompanyDetail/CompanyDetail.module.css
@@ -20,6 +20,17 @@
     margin-left: -50px;
 }
 
+.paper {
+    display: flex;
+    width: 360px;
+    justify-content: center;
+    background-color: white;
+    /* background-color: #89e6ab; */
+    box-shadow: 0px 0px 2px 0px #b1aeae;
+    border-radius: 5px 5px 5px 5px;
+    border-bottom: 0.5px solid #b1aeae
+}
+
 .container {
     display: flex;
     justify-content: center;
